Quest system refactor