@@ -5,7 +5,6 @@ import com.google.gson.reflect.TypeToken;
 import lombok.Getter;
 import platformer.debug.logger.Logger;
 import platformer.debug.logger.Message;
-import platformer.model.gameObjects.objects.Shop;
 import platformer.model.inventory.ItemType;
 import platformer.observer.Subscriber;
 import platformer.state.GameState;
@@ -28,18 +27,15 @@ import static platformer.constants.UI.*;
 public class QuestManager implements Subscriber {
 
     private final GameState gameState;
-    private List<Quest> quests;
+    private List<Quest> allQuests;
     private List<Quest> progressiveQuests, repeatableQuests;
     private List<QuestSlot> slots;
-
-    private final Map<String, Runnable> eventActions = new HashMap<>();
 
     public QuestManager(GameState gameState) {
         this.gameState = gameState;
         loadQuests(QUESTS_PATH);
         initSlots();
         initObservers();
-        initEventActions();
     }
 
     private void initObservers() {
@@ -52,11 +48,13 @@ public class QuestManager implements Subscriber {
         GsonBuilder gsonBuilder = new GsonBuilder();
         gsonBuilder.registerTypeAdapter(new TypeToken<Map<ItemType, Integer>>() {}.getType(), new ItemTypeMapDeserializer());
         gsonBuilder.registerTypeAdapter(QuestType.class, new QuestTypeDeserializer());
+        gsonBuilder.registerTypeAdapter(QuestObjectiveType.class, new QuestObjectiveTypeDeserializer());
+        gsonBuilder.registerTypeAdapter(ObjectiveTarget.class, new ObjectiveTargetDeserializer());
         Gson gson = gsonBuilder.create();
 
         try (FileReader reader = new FileReader(filePath)) {
             Type questListType = new TypeToken<List<Quest>>() {}.getType();
-            quests = gson.fromJson(reader, questListType);
+            allQuests = gson.fromJson(reader, questListType);
             progressiveQuests = filterAndSortQuests(QuestType.PROGRESSIVE);
             repeatableQuests = filterAndSortQuests(QuestType.REPEATABLE);
         } catch (IOException e) {
@@ -71,7 +69,7 @@ public class QuestManager implements Subscriber {
      * @return a list of filtered and sorted quests
      */
     private List<Quest> filterAndSortQuests(QuestType type) {
-        return quests.stream()
+        return allQuests.stream()
                 .filter(quest -> quest.getType() == type)
                 .sorted(Comparator.comparingInt(Quest::getId))
                 .collect(Collectors.toList());
@@ -80,27 +78,18 @@ public class QuestManager implements Subscriber {
     private void initSlots() {
         this.slots = new ArrayList<>();
         List<Quest> availableProgressiveQuests = progressiveQuests.stream()
-                .filter(quest -> quest.getParentId() == 0 && quest.getNpcRequest() == 0)
-                .collect(Collectors.toList());
+                .filter(quest -> (quest.getPrerequisites() == null || quest.getPrerequisites().isEmpty()) && quest.getNpcRequest() == 0)
+                .toList();
 
         if (!repeatableQuests.isEmpty()) {
             Quest randomRepeatableQuest = repeatableQuests.get(new Random().nextInt(repeatableQuests.size()));
-            slots.add(new QuestSlot(randomRepeatableQuest, QUEST_SLOT_X, QUEST_SLOT_Y + QUEST_SLOT_SPACING));
+            slots.add(new QuestSlot(randomRepeatableQuest, 0, 0));
         }
 
-        int k = QUEST_SLOT_CAP - 1;
-        for (int i = 0; i < availableProgressiveQuests.size(); i++, k++) {
-            slots.add(new QuestSlot(availableProgressiveQuests.get(i), QUEST_SLOT_X, QUEST_SLOT_Y + k * QUEST_SLOT_SPACING));
-            if (k == QUEST_SLOT_CAP) k = 0;
+        for (Quest quest : availableProgressiveQuests) {
+            slots.add(new QuestSlot(quest, 0, 0));
         }
-    }
-
-    private void initEventActions() {
-        eventActions.put("Kill Skeletons", () -> updateQuestProgress("Kill Skeletons"));
-        eventActions.put("Kill Ghouls", () -> updateQuestProgress("Kill Ghouls"));
-        eventActions.put("Break Crates", () -> updateQuestProgress("Break Crates"));
-        eventActions.put("Upgrade Sword", () -> updateQuestProgress("Upgrade Sword"));
-        eventActions.put("Buy Armor", () -> updateQuestProgress("Buy Armor"));
+        sortAndRepositionSlots();
     }
 
     /**
@@ -112,85 +101,93 @@ public class QuestManager implements Subscriber {
     @Override
     @SafeVarargs
     public final <T> void update(T... o) {
-        if (o[0] instanceof String) {
-            String event = (String) o[0];
-            Optional.ofNullable(eventActions.get(event)).ifPresent(Runnable::run);
+        if (o.length < 2 || !(o[0] instanceof QuestObjectiveType eventType) || !(o[1] instanceof ObjectiveTarget eventTarget)) return;
+
+        for (QuestSlot slot : new ArrayList<>(slots)) {
+            Quest quest = slot.getQuest();
+            if (quest.isCompleted() || quest.getObjectives() == null || quest.getObjectives().isEmpty()) continue;
+
+            if (quest.getActiveObjectiveIndex() < quest.getObjectives().size()) {
+                QuestObjective activeObjective = quest.getObjectives().get(quest.getActiveObjectiveIndex());
+                if (activeObjective.getType() == eventType && activeObjective.getTarget() == eventTarget) {
+                    activeObjective.setCurrentAmount(activeObjective.getCurrentAmount() + 1);
+                    checkObjectiveCompletion(quest);
+                }
+            }
         }
     }
 
-    /**
-     * Updates the progress of the specified quest.
-     *
-     * @param questName the name of the quest
-     */
-    private void updateQuestProgress(String questName) {
-        findQuestByName(questName).ifPresent(quest -> {
-            quest.progress();
-            Logger.getInstance().notify("Quest Progress: " + quest.getName(), Message.INFORMATION);
-            if (quest.isCompleted()) {
+    private void checkObjectiveCompletion(Quest quest) {
+        QuestObjective activeObjective = quest.getObjectives().get(quest.getActiveObjectiveIndex());
+        if (activeObjective.getCurrentAmount() >= activeObjective.getRequiredAmount()) {
+            if (quest.getActiveObjectiveIndex() >= quest.getObjectives().size() - 1) {
+                quest.setCompleted(true);
                 completeQuest(quest);
                 Logger.getInstance().notify("Quest Completed: " + quest.getName(), Message.INFORMATION);
             }
-        });
+            else {
+                quest.setActiveObjectiveIndex(quest.getActiveObjectiveIndex() + 1);
+                Logger.getInstance().notify("Quest Updated: " + quest.getName(), Message.INFORMATION);
+            }
+        }
     }
 
-    /**
-     * Completes the specified quest and updates the quest slots.
-     *
-     * @param quest the quest to complete
-     */
     public void completeQuest(Quest quest) {
-        gameState.getPlayer().getInventory().completeQuestFill(quest.getItemRewards());
+        if(quest.getItemRewards() != null) gameState.getPlayer().getInventory().completeQuestFill(quest.getItemRewards());
+        if(quest.getCoinReward() > 0) gameState.getPlayer().changeCoins(quest.getCoinReward());
+        if(quest.getExpReward() > 0) gameState.getPlayer().changeExp(quest.getExpReward());
+
         switchQuest(quest);
         sortAndRepositionSlots();
     }
 
-    /**
-     * Switches the completed quest with the next quest in the sequence.
-     *
-     * @param quest the completed quest
-     */
     private void switchQuest(Quest quest) {
-        Quest newQuest = findNextQuest(quest);
-        if (newQuest != null && slots.stream().noneMatch(slot -> slot.getQuest().equals(newQuest))) {
-            if (quest.getType() == QuestType.PROGRESSIVE) {
-                int position = slots.size() % QUEST_SLOT_CAP - 1;
-                slots.stream()
-                        .filter(slot -> slot.getQuest().equals(quest))
-                        .findFirst()
-                        .ifPresent(slot -> slot.setQuest(newQuest));
-                QuestSlot newSlot = new QuestSlot(quest, QUEST_SLOT_X, QUEST_SLOT_Y + position * QUEST_SLOT_SPACING);
-                if (slots.stream().noneMatch(s -> s.getQuest().equals(quest))) slots.add(newSlot);
+        if (quest.getType() == QuestType.REPEATABLE) {
+            quest.reset();
+            slots.stream()
+                    .filter(s -> s.getQuest().equals(quest))
+                    .findFirst()
+                    .ifPresent(slot -> {
+                        Quest newRepeatable = repeatableQuests.stream()
+                                .filter(q -> !q.equals(quest) && slots.stream().noneMatch(s2 -> s2.getQuest().equals(q)))
+                                .findAny()
+                                .orElse(quest);
+                        slot.setQuest(newRepeatable);
+                    });
+        }
+
+        List<Quest> nextQuests = findNextQuests(quest);
+        for (Quest newQuest : nextQuests) {
+            if (slots.stream().noneMatch(slot -> slot.getQuest().equals(newQuest))) {
+                slots.add(new QuestSlot(newQuest, 0, 0));
             }
         }
     }
 
-    /**
-     * Finds the next quest in the sequence for the specified quest.
-     *
-     * @param quest the current quest
-     * @return the next quest, or null if no next quest is found
-     */
-    private Quest findNextQuest(Quest quest) {
-        if (quest.getType() == QuestType.REPEATABLE) {
-            quest.reset();
-            return repeatableQuests.stream()
-                    .filter(q -> !q.equals(quest))
-                    .findAny()
-                    .orElse(null);
-        } else if (quest.getType() == QuestType.PROGRESSIVE) {
-            return progressiveQuests.stream()
-                    .filter(q -> q.getParentId() == quest.getId())
-                    .findAny()
-                    .orElse(null);
-        }
-        return null;
+    private List<Quest> findNextQuests(Quest completedQuest) {
+        if (completedQuest.getId() == -1) return new ArrayList<>();
+        return progressiveQuests.stream()
+                .filter(q -> q.getPrerequisites() != null && q.getPrerequisites().contains(completedQuest.getId()))
+                .filter(this::areAllPrerequisitesMet)
+                .collect(Collectors.toList());
+    }
+
+    private boolean areAllPrerequisitesMet(Quest quest) {
+        if (quest.getPrerequisites() == null || quest.getPrerequisites().isEmpty()) return true;
+        return quest.getPrerequisites().stream()
+                .allMatch(prereqId ->
+                        allQuests.stream()
+                                .filter(q -> q.getId() == prereqId)
+                                .findFirst()
+                                .map(Quest::isCompleted)
+                                .orElse(false)
+                );
     }
 
     private void sortAndRepositionSlots() {
-        slots.sort(Comparator.comparing((QuestSlot slot) -> slot.getQuest().getType() == QuestType.REPEATABLE)
-                .reversed()
-                .thenComparing(slot -> slot.getQuest().isCompleted()));
+        slots.sort(Comparator.comparing((QuestSlot slot) -> slot.getQuest().getType() == QuestType.REPEATABLE).reversed()
+                .thenComparing(QuestSlot::isCompleted)
+                .thenComparingInt(slot -> slot.getQuest().getId()));
 
         int k = 1;
         for (int i = 0; i < slots.size(); i++, k++) {
@@ -203,54 +200,62 @@ public class QuestManager implements Subscriber {
     public void startNPCQuest(String questName) {
         findQuestByName(questName).ifPresent(quest -> {
             if (slots.stream().noneMatch(slot -> slot.getQuest().equals(quest))) {
-                int position = slots.size() % QUEST_SLOT_CAP - 1;
-                QuestSlot newSlot = new QuestSlot(quest, QUEST_SLOT_X, QUEST_SLOT_Y + position * QUEST_SLOT_SPACING);
+                QuestSlot newSlot = new QuestSlot(quest, 0, 0);
                 slots.add(newSlot);
                 sortAndRepositionSlots();
                 Logger.getInstance().notify("Quest Started: " + questName, Message.INFORMATION);
-            } else {
-                Logger.getInstance().notify("Quest already started: " + questName, Message.WARNING);
             }
+            else Logger.getInstance().notify("Quest already started: " + questName, Message.WARNING);
         });
     }
 
     private Optional<Quest> findQuestByName(String questName) {
-        return quests.stream()
+        return allQuests.stream()
                 .filter(q -> q.getName().equals(questName))
                 .findFirst();
     }
 
     public void reset() {
-        gameState.getObjectManager().getObjects(Shop.class)
-                .forEach(shop -> shop.addSubscriber(this));
+        // Should be empty (can be used to reset all quests)
     }
 
-    /**
-     * Custom deserializer for ItemType map.
-     */
+    // Custom Deserializers
     private static class ItemTypeMapDeserializer implements JsonDeserializer<Map<ItemType, Integer>> {
         @Override
         public Map<ItemType, Integer> deserialize(JsonElement json, Type typeOfT, JsonDeserializationContext context) throws JsonParseException {
             JsonObject jsonObject = json.getAsJsonObject();
             Map<ItemType, Integer> itemMap = new HashMap<>();
-
             for (Map.Entry<String, JsonElement> entry : jsonObject.entrySet()) {
-                ItemType itemType = ItemType.valueOf(entry.getKey());
-                Integer quantity = entry.getValue().getAsInt();
-                itemMap.put(itemType, quantity);
+                try {
+                    ItemType itemType = ItemType.valueOf(entry.getKey());
+                    Integer quantity = entry.getValue().getAsInt();
+                    itemMap.put(itemType, quantity);
+                } catch (IllegalArgumentException e) {
+                    System.err.println("Warning: Unknown ItemType in quests.json: " + entry.getKey());
+                }
             }
-
             return itemMap;
         }
     }
 
-    /**
-     * Custom deserializer for QuestType.
-     */
     private static class QuestTypeDeserializer implements JsonDeserializer<QuestType> {
         @Override
-        public QuestType deserialize(JsonElement json, Type typeOfT, JsonDeserializationContext context) throws JsonParseException {
+        public QuestType deserialize(JsonElement json, Type typeOfT, JsonDeserializationContext context) {
             return QuestType.valueOf(json.getAsString().toUpperCase());
+        }
+    }
+
+    private static class QuestObjectiveTypeDeserializer implements JsonDeserializer<QuestObjectiveType> {
+        @Override
+        public QuestObjectiveType deserialize(JsonElement json, Type typeOfT, JsonDeserializationContext context) {
+            return QuestObjectiveType.valueOf(json.getAsString().toUpperCase());
+        }
+    }
+
+    private static class ObjectiveTargetDeserializer implements JsonDeserializer<ObjectiveTarget> {
+        @Override
+        public ObjectiveTarget deserialize(JsonElement json, Type typeOfT, JsonDeserializationContext context) {
+            return ObjectiveTarget.valueOf(json.getAsString().toUpperCase());
         }
     }
 }
